# json

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  BasicSlcIdentificationTest.cpp  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.tpl  Doxyfile  INSTALL.md  LICENSE  README  README.md  TODO  generate_doc.sh  generate_doc_from_master.sh  inglued  prepare_doc_for_upload.sh
.github/workflows/: ci.yml
.nxxm/: deps  opts.wasm-cxx17
.tipi/: deps  id  opts
boost/: README.md
boost/asio/: mockup_serial_port_service.hpp
boost/asio/detail/: mockup_serial_port_service.hpp
boost/asio/detail/impl/: mockup_serial_port_service.ipp
boost/fusion/: adapted_struct_printer.hpp  for_each_member.hpp
boost/fusion/detail/: adapted_variant_printer.hpp  cstdint_to_hexa_stream_operators.hpp
boost/fusion/traits/: is_boost_variant.hpp
cmake/modules/: lib-cpp-pre-config.cmake.in
doc/: index.md  tutorial_to_and_from_json.md
examples/: CMakeLists.txt  boost_asio_mockup_serial_port.cpp  from_json.cpp  to_json.cpp
mapbox/: variant.hpp
pre/: doc.hpp  retry_for.hpp
pre/bits/: utils.hpp
pre/boost/asio/: flush.hpp  get_bytes_available.hpp  mockup_serial_port_service.hpp
pre/boost/asio/detail/: mockup_serial_port_service.hpp
pre/boost/asio/detail/impl/: mockup_serial_port_service.ipp
pre/boost/fusion/: adapted_struct_jsonize.hpp  adapted_struct_printer.hpp  adapted_struct_printer.hpp.orig  auto_adapt_struct.hpp  for_each_member.hpp
pre/boost/fusion/detail/: adapted_variant_printer.hpp.orig  std_containers_ostream_operators.hpp
pre/boost/fusion/traits/: is_associative_container.hpp  is_boost_variant.hpp  is_container.hpp
pre/boost/ref/: comparison.hpp
pre/bytes/: utils.hpp
pre/chrono/: chrono_suffixes.hpp
pre/cv/: force_inbound_policy.hpp
pre/cx/: key_value_pair.hpp
pre/detail/: namespace_compatibility.hpp
pre/enums/: adapt_enum.hpp  smart_enum.hpp  to_underlying.hpp
pre/fusion/: for_each_member.hpp
pre/iostreams/: indenting_ostream.hpp
pre/iterators/: indexed.hpp
pre/json/: dejsonize.hpp  from_json.hpp  jsonize.hpp  mapping.hpp  to_json.hpp
pre/json/detail/: dejsonizer.hpp  get_type_name_as_string.hpp  jsonizer.hpp  sfinae_enabler.hpp
pre/json/traits/: is_associative_container.hpp  is_boost_variant.hpp  is_container.hpp  is_jsonizable.hpp  is_string.hpp
pre/lambda/: function_traits.hpp
pre/range/: erase_if.hpp
pre/spirit/karma/: crc_of.hpp  size_of.hpp
pre/traits/: function_traits.hpp
pre/type_traits/: function_traits.hpp
pre/type_traits/detail/: function_traits_impl.hpp
pre/variant/: apply_visitor.hpp  assign_if_compatible.hpp  for_each_type.hpp  get.hpp  get_trait.hpp  get_type_name.hpp  is_active_type.hpp  optimized_boost_get_for.hpp  polymorphic_get.hpp
pre/variant/detail/: assignable_from.hpp
pre/variant/traits/: is_boost_variant.hpp  is_std_variant.hpp
swissarmyknife/bits/: utils.hpp
swissarmyknife/boost/fusion/: adapted_struct_printer.hpp  for_each_member.hpp
swissarmyknife/boost/fusion/detail/: adapted_variant_printer.hpp  std_containers_ostream_operators.hpp
swissarmyknife/boost/ref/: comparison.hpp
swissarmyknife/bytes/: utils.hpp
swissarmyknife/chrono/: chrono_suffixes.hpp
swissarmyknife/detail/: config.hpp
swissarmyknife/enums/: adapt_enum.hpp  smart_enum.hpp  utils.hpp
swissarmyknife/iostreams/: indenting_ostream.hpp
swissarmyknife/iterators/: indexed.hpp
swissarmyknife/range/: erase_if.hpp
test/: CMakeLists.txt  adapted_struct_jsonize.cpp  adapted_struct_jsonize_test.cpp  adapted_struct_printer.cpp  asio_mockup_serial_port_service_test.cpp  dejsonize_test.cpp  enums.cpp  function_traits_test.cpp  retry_for.cpp  variant_for_each_type.cpp  wasm_boost_test.hpp
